--- a/index.html
+++ b/index.html
@@ -7,29 +7,160 @@
     <title>HTML to Rendered Output</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+        #htmlInput {
+            font-family: monospace;
+            font-size: 0.875rem;
+            color: #1f2937;
+            line-height: 1.5;
+            padding: 1rem;
+        }
+
         #output {
-            min-height: 16rem;
-            max-height: 16rem;
+            min-height: 24rem;
+            max-height: 24rem;
             overflow-y: auto;
-            white-space: pre-wrap;
+            white-space: normal;
             word-wrap: break-word;
+            padding: 0.5rem;
+            line-height: 1;
+        }
+
+        #output h1 {
+            font-size: 1.6em;
+            font-weight: bold;
+            margin: 0;
+        }
+
+        #output h2 {
+            font-size: 1.4em;
+            font-weight: bold;
+            margin: 0;
+        }
+
+        #output h3 {
+            font-size: 1.2em;
+            font-weight: bold;
+            margin: 0;
+        }
+
+        #output h4 {
+            font-size: 1em;
+            font-weight: bold;
+            margin: 0;
+        }
+
+        #output p {
+            display: block;
+            margin-block-start: 1em;
+            margin-block-end: 1em;
+            margin-inline-start: 0px;
+            margin-inline-end: 0px;
+            unicode-bidi: isolate;
+            ;
+        }
+
+        #output a {
+            color: blue;
+            text-decoration: underline;
+        }
+
+        #output b,
+        #output strong {
+            font-weight: bold;
+        }
+
+        #output i,
+        #output em {
+            font-style: italic;
+        }
+
+        #output ul,
+        #output ol {
+            margin: 0;
+            padding-left: 1.5em;
+            list-style: disc outside;
+            margin-block-start: 0;
+            margin-block-end: 0;
+        }
+
+        #output ol {
+            list-style: decimal outside;
+        }
+
+        #output li {
+            margin: 0;
+            line-height: 1;
+        }
+
+        #output p+ul,
+        #output p+ol {
+            margin-top: 0;
+        }
+
+        #output ul+p,
+        #output ol+p {
+            margin-top: 0;
+        }
+
+        #output table {
+            border-collapse: collapse;
+            margin: 0;
+        }
+
+        #output th,
+        #output td {
+            border: 1px solid #ccc;
+            padding: 0.4em;
+        }
+
+        #output img {
+            max-width: 100%;
+            height: auto;
+            margin: 0;
+        }
+
+        #output blockquote {
+            border-left: 4px solid #ccc;
+            margin: 0;
+            padding: 0 0.5em;
+        }
+
+        #output code,
+        #output pre {
+            font-family: monospace;
+            background: #f4f4f4;
+            padding: 0.2em;
+            margin: 0;
+        }
+
+        #output pre {
+            white-space: pre-wrap;
+        }
+
+        #output hr {
+            border: 0;
+            border-top: 1px solid #ccc;
+            margin: 0;
+        }
+
+        #output * {
+            box-sizing: border-box;
         }
     </style>
 </head>
 
-<body class="bg-gray-100 min-h-screen flex items-center justify-center">
-    <div class="container mx-auto p-4 max-w-4xl">
-        <h1 class="text-2xl font-bold text-center mb-6">HTML to Rendered Output</h1>
-        <div class="flex flex-col md:flex-row gap-4">
+<body class="bg-white min-h-screen flex items-center justify-center">
+    <div class="container mx-auto p-2 max-w-7xl">
+        <h1 class="text-xl font-bold text-center mb-4">HTML to Rendered Output</h1>
+        <div class="flex flex-col md:flex-row gap-3">
             <div class="w-full md:w-1/2">
-                <label class="block text-sm font-medium text-gray-700 mb-2">Input HTML</label>
+                <label class="block text-sm font-medium text-gray-700 mb-1">Input HTML</label>
                 <textarea id="htmlInput"
-                    class="w-full h-64 p-4 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
-                    placeholder="Enter HTML here..."></textarea>
+                    class="w-full h-96 p-4 border border-blue-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 resize-none"></textarea>
             </div>
             <div class="w-full md:w-1/2">
-                <label class="block text-sm font-medium text-gray-700 mb-2">Rendered Output</label>
-                <div id="output" class="w-full h-64 p-4 border rounded-lg bg-gray-50"></div>
+                <label class="block text-sm font-medium text-gray-700 mb-1">Rendered Output</label>
+                <div id="output" class="w-full h-96 p-4 border border-blue-300 rounded-lg bg-white"></div>
             </div>
         </div>
     </div>
@@ -45,13 +176,13 @@
         function renderHTML(html) {
             try {
                 output.innerHTML = '';
-
+                if (!html.trim()) {
+                    output.innerHTML = 'No HTML content';
+                    return;
+                }
                 const tempDiv = document.createElement('div');
                 tempDiv.innerHTML = html;
-
                 output.append(...tempDiv.childNodes);
-
-                output.style.whiteSpace = 'pre-wrap';
             } catch (error) {
                 output.innerHTML = 'Invalid HTML content';
             }
